k8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3001
  type: ClusterIP
